Add CrostiniSharePath to observe volume mount events to auto reshare

Automatically share and unshare persisted shared folders when the
relevant volume is mounted or unmounted.  For example, when a removable
USB is added and removed, it will automatically be shared and unshared
with the VM if it is set as a persistent share.

Bug: 908289
Change-Id: I77435b8be227959669c741b3f6e3c79ccf6c62b5
Reviewed-on: https://chromium-review.googlesource.com/c/1381359
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617421}