chrome/browser/chromeos/crostini/crostini_share_path.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/files/file_path.h"
 #include "base/observer_list.h"
 #include "chrome/browser/chromeos/crostini/crostini_manager.h"
+#include "chrome/browser/chromeos/file_manager/volume_manager_observer.h"
 #include "chromeos/dbus/seneschal/seneschal_service.pb.h"
 #include "components/keyed_service/core/keyed_service.h"
 
@@ -21,8 +22,14 @@ namespace crostini {
 
 // Handles sharing and unsharing paths from the Chrome OS host to the crostini
 // VM via seneschal.
-class CrostiniSharePath : public KeyedService {
+class CrostiniSharePath : public KeyedService,
+                          public file_manager::VolumeManagerObserver {
  public:
+  using MountEventSeneschalCallback =
+      base::RepeatingCallback<void(const std::string& operation,
+                                   const base::FilePath& path,
+                                   bool result,
+                                   std::string failure_reason)>;
   class Observer {
    public:
     virtual void OnUnshare(const base::FilePath& path) = 0;
@@ -71,6 +78,18 @@ class CrostiniSharePath : public KeyedService {
   // Save |path| into prefs.
   void RegisterPersistedPath(const base::FilePath& path);
 
+  // file_manager::VolumeManagerObserver
+  void OnVolumeMounted(chromeos::MountError error_code,
+                       const file_manager::Volume& volume) override;
+  void OnVolumeUnmounted(chromeos::MountError error_code,
+                         const file_manager::Volume& volume) override;
+
+  // Allow seneschal callback for mount events to be overridden for testing.
+  void SetMountEventSeneschalCallbackForTesting(
+      MountEventSeneschalCallback callback) {
+    mount_event_seneschal_callback_ = std::move(callback);
+  }
+
  private:
   void CallSeneschalSharePath(
       std::string vm_name,
@@ -85,6 +104,9 @@ class CrostiniSharePath : public KeyedService {
 
   Profile* profile_;
   bool first_for_session_ = true;
+
+  // Allow callback for mount event to be overidden for testing.
+  MountEventSeneschalCallback mount_event_seneschal_callback_;
   base::ObserverList<Observer>::Unchecked observers_;
 
   DISALLOW_COPY_AND_ASSIGN(CrostiniSharePath);
